undo storage changes

--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_show_usage.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_show_usage.yaml
@@ -13,34 +13,34 @@ interactions:
       ParameterSetName:
       - -l
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Storage/locations/westus/usages?api-version=2022-09-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Storage/locations/westus/usages?api-version=2023-01-01
   response:
     body:
-      string: '{"value":[{"unit":"Count","currentValue":24,"limit":250,"name":{"value":"StorageAccounts","localizedValue":"Storage
-        Accounts"}}]}'
+      string: '{"value":[{"unit":"Count","currentValue":20,"limit":250,"name":{"value":"StorageAccounts","localizedValue":"Storage
+        Accounts"}},{"unit":"Count","currentValue":1,"limit":5000,"name":{"value":"StorageAccounts-AzureDNSZone","localizedValue":"AzureDNSZone
+        Storage Accounts"}}]}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '129'
+      - '273'
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 22:55:38 GMT
+      - Thu, 19 Oct 2023 07:30:00 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
-      x-msedge-ref:
-      - 'Ref A: 08903FE9B3714EF09522334EEA85E434 Ref B: CO6AA3150219039 Ref C: 2023-11-20T22:55:39Z'
     status:
       code: 200
       message: OK
