--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_copy_rehydrate_priority.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_copy_rehydrate_priority.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:14:17.6213918Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:14:17.6213918Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:33:02.9099846Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:33:02.9099846Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,19 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:24 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
-      x-msedge-ref:
-      - 'Ref A: F501314E16534D0BBEA1D898D8C65D18 Ref B: CO6AA3150219039 Ref C: 2023-11-20T23:14:38Z'
+      - '11995'
     status:
       code: 200
       message: OK
@@ -63,9 +62,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:24 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +77,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:23 GMT
       etag:
-      - '"0x8DBEA1E7820F87F"'
+      - '"0x8DBD086713D595B"'
       last-modified:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:24 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -105,9 +105,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:24 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -119,11 +120,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:24 GMT
       etag:
-      - '"0x8DBEA1E7844ABC5"'
+      - '"0x8DBD08671886E92"'
       last-modified:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -151,11 +152,12 @@ interactions:
       ParameterSetName:
       - -c -f -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -169,11 +171,11 @@ interactions:
       content-md5:
       - zjOP5omXeKrPwoQU8tlJiw==
       date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       etag:
-      - '"0x8DBEA1E786EDFF4"'
+      - '"0x8DBD08671CB1F7D"'
       last-modified:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-content-crc64:
@@ -201,11 +203,12 @@ interactions:
       ParameterSetName:
       - -c -n --tier --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-access-tier:
       - Archive
       x-ms-date:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       x-ms-rehydrate-priority:
       - Standard
       x-ms-version:
@@ -219,7 +222,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -241,9 +244,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -261,21 +265,21 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:14:38 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       etag:
-      - '"0x8DBEA1E786EDFF4"'
+      - '"0x8DBD08671CB1F7D"'
       last-modified:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
       - Archive
       x-ms-access-tier-change-time:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:25 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -303,13 +307,14 @@ interactions:
       ParameterSetName:
       - -b -c --source-uri --tier -r --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-access-tier:
       - Cool
       x-ms-copy-source:
-      - https://clitest2cyisbsahwtzr6o3p.blob.core.windows.net/contm4d4xectzyejy54wm5s7/src
+      - https://clitestzzytttedbdrpl3sfe.blob.core.windows.net/cont3b7elhoxsoue55uetjme/src
       x-ms-date:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       x-ms-rehydrate-priority:
       - High
       x-ms-version:
@@ -323,15 +328,15 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:14:39 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       etag:
-      - '"0x8DBEA1E78F3598D"'
+      - '"0x8DBD086728022D4"'
       last-modified:
-      - Mon, 20 Nov 2023 23:14:40 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-copy-id:
-      - fe77f629-0471-4721-8402-dc32c7820a26
+      - 0330f7a0-b1c4-4c94-b97a-df0e926f2ad8
       x-ms-copy-status:
       - success
       x-ms-version:
@@ -353,9 +358,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:14:40 GMT
+      - Thu, 19 Oct 2023 09:33:27 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -373,35 +379,35 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:14:40 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       etag:
-      - '"0x8DBEA1E78F3598D"'
+      - '"0x8DBD086728022D4"'
       last-modified:
-      - Mon, 20 Nov 2023 23:14:40 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
       - Archive
       x-ms-access-tier-change-time:
-      - Mon, 20 Nov 2023 23:14:40 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       x-ms-archive-status:
       - rehydrate-pending-to-cool
       x-ms-blob-type:
       - BlockBlob
       x-ms-copy-completion-time:
-      - Mon, 20 Nov 2023 23:14:40 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       x-ms-copy-id:
-      - fe77f629-0471-4721-8402-dc32c7820a26
+      - 0330f7a0-b1c4-4c94-b97a-df0e926f2ad8
       x-ms-copy-progress:
       - 16384/16384
       x-ms-copy-source:
-      - https://clitest2cyisbsahwtzr6o3p.blob.core.windows.net/contm4d4xectzyejy54wm5s7/src
+      - https://clitestzzytttedbdrpl3sfe.blob.core.windows.net/cont3b7elhoxsoue55uetjme/src
       x-ms-copy-status:
       - success
       x-ms-copy-status-description:
       - pending
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:14:40 GMT
+      - Thu, 19 Oct 2023 09:33:26 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
