--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_container_access_policy_scenario.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_container_access_policy_scenario.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:14:42.9498143Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:14:42.9498143Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:35:50.5392635Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:35:50.5392635Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:11 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
-      x-msedge-ref:
-      - 'Ref A: 1792E8B9A9294492A7802C6CE6206F7D Ref B: CO6AA3150218031 Ref C: 2023-11-20T23:15:05Z'
+      - '11989'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:11 GMT
       etag:
-      - '"0x8DBEA1E88479298"'
+      - '"0x8DBD086D52A144A"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -103,9 +107,10 @@ interactions:
       ParameterSetName:
       - -c -n --expiry --permissions --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
@@ -118,11 +123,11 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:11 GMT
       etag:
-      - '"0x8DBEA1E88479298"'
+      - '"0x8DBD086D52A144A"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -135,7 +140,7 @@ interactions:
 - request:
     body: '<?xml version=''1.0'' encoding=''utf-8''?>
 
-      <SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-11-21T00:15:00Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>'
+      <SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-10-19T10:36:00Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>'
     headers:
       Accept:
       - application/xml
@@ -152,9 +157,10 @@ interactions:
       ParameterSetName:
       - -c -n --expiry --permissions --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:06 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -166,11 +172,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:05 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       etag:
-      - '"0x8DBEA1E8879494E"'
+      - '"0x8DBD086D57AD4DE"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:06 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -192,25 +198,26 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:07 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
     uri: https://clitest000002.blob.core.windows.net/cont000003?restype=container&comp=acl
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-11-21T00:15:00.0000000Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-10-19T10:36:00.0000000Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
     headers:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:07 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       etag:
-      - '"0x8DBEA1E8879494E"'
+      - '"0x8DBD086D57AD4DE"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:06 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -234,25 +241,26 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:07 GMT
+      - Thu, 19 Oct 2023 09:36:13 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
     uri: https://clitest000002.blob.core.windows.net/cont000003?restype=container&comp=acl
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-11-21T00:15:00.0000000Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-10-19T10:36:00.0000000Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
     headers:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:07 GMT
+      - Thu, 19 Oct 2023 09:36:13 GMT
       etag:
-      - '"0x8DBEA1E8879494E"'
+      - '"0x8DBD086D57AD4DE"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:06 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -282,11 +290,12 @@ interactions:
       ParameterSetName:
       - -n -c -f --sas-token --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:07 GMT
+      - Thu, 19 Oct 2023 09:36:13 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -300,11 +309,11 @@ interactions:
       content-md5:
       - DfvoqkwgtS4bi/PLbL3xkw==
       date:
-      - Mon, 20 Nov 2023 23:15:07 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       etag:
-      - '"0x8DBEA1E898DC0A3"'
+      - '"0x8DBD086D64A9BC4"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-content-crc64:
@@ -330,25 +339,26 @@ interactions:
       ParameterSetName:
       - -c -n --permissions --start --expiry --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
     uri: https://clitest000002.blob.core.windows.net/cont000003?restype=container&comp=acl
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-11-21T00:15:00.0000000Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Expiry>2023-10-19T10:36:00.0000000Z</Expiry><Permission>racwdxyltfmei</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
     headers:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:13 GMT
       etag:
-      - '"0x8DBEA1E8879494E"'
+      - '"0x8DBD086D57AD4DE"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:06 GMT
+      - Thu, 19 Oct 2023 09:36:12 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -361,7 +371,7 @@ interactions:
 - request:
     body: '<?xml version=''1.0'' encoding=''utf-8''?>
 
-      <SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Start>2023-11-20T22:15:00Z</Start><Expiry>2023-11-21T00:15:00Z</Expiry><Permission>rwdxl</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>'
+      <SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Start>2023-10-19T08:36:00Z</Start><Expiry>2023-10-19T10:36:00Z</Expiry><Permission>rwdxl</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>'
     headers:
       Accept:
       - application/xml
@@ -378,9 +388,10 @@ interactions:
       ParameterSetName:
       - -c -n --permissions --start --expiry --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -392,11 +403,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       etag:
-      - '"0x8DBEA1E89C1001A"'
+      - '"0x8DBD086D68BCEE8"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -418,25 +429,26 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
     uri: https://clitest000002.blob.core.windows.net/cont000003?restype=container&comp=acl
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Start>2023-11-20T22:15:00.0000000Z</Start><Expiry>2023-11-21T00:15:00.0000000Z</Expiry><Permission>rwdxl</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Start>2023-10-19T08:36:00.0000000Z</Start><Expiry>2023-10-19T10:36:00.0000000Z</Expiry><Permission>rwdxl</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
     headers:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       etag:
-      - '"0x8DBEA1E89C1001A"'
+      - '"0x8DBD086D68BCEE8"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -460,25 +472,26 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:15 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
     uri: https://clitest000002.blob.core.windows.net/cont000003?restype=container&comp=acl
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Start>2023-11-20T22:15:00.0000000Z</Start><Expiry>2023-11-21T00:15:00.0000000Z</Expiry><Permission>rwdxl</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><SignedIdentifiers><SignedIdentifier><Id>policy000005</Id><AccessPolicy><Start>2023-10-19T08:36:00.0000000Z</Start><Expiry>2023-10-19T10:36:00.0000000Z</Expiry><Permission>rwdxl</Permission></AccessPolicy></SignedIdentifier></SignedIdentifiers>"
     headers:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       etag:
-      - '"0x8DBEA1E89C1001A"'
+      - '"0x8DBD086D68BCEE8"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -506,9 +519,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:15 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -520,11 +534,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:08 GMT
+      - Thu, 19 Oct 2023 09:36:14 GMT
       etag:
-      - '"0x8DBEA1E8A1C5874"'
+      - '"0x8DBD086D715F956"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:09 GMT
+      - Thu, 19 Oct 2023 09:36:15 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -546,9 +560,10 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:09 GMT
+      - Thu, 19 Oct 2023 09:36:15 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
@@ -561,11 +576,11 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:09 GMT
+      - Thu, 19 Oct 2023 09:36:15 GMT
       etag:
-      - '"0x8DBEA1E8A1C5874"'
+      - '"0x8DBD086D715F956"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:09 GMT
+      - Thu, 19 Oct 2023 09:36:15 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
