--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_fs_directory_generate_sas_as_user.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_fs_directory_generate_sas_as_user.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:09:03.5865105Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:09:03.5865105Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:05:27.7932489Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:05:27.7932489Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:09:24 GMT
+      - Thu, 19 Oct 2023 09:05:48 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
       - '11996'
-      x-msedge-ref:
-      - 'Ref A: E4BC13F75E4E44828E83BDC2C28AFB17 Ref B: CO6AA3150217025 Ref C: 2023-11-20T23:09:24Z'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:24 GMT
+      - Thu, 19 Oct 2023 09:05:49 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:09:24 GMT
+      - Thu, 19 Oct 2023 09:05:49 GMT
       etag:
-      - '"0x8DBEA1DBD3803DE"'
+      - '"0x8DBD0829693031B"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:25 GMT
+      - Thu, 19 Oct 2023 09:05:49 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -105,9 +109,10 @@ interactions:
       ParameterSetName:
       - -n -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:25 GMT
+      - Thu, 19 Oct 2023 09:05:49 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -119,11 +124,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:09:24 GMT
+      - Thu, 19 Oct 2023 09:05:49 GMT
       etag:
-      - '"0x8DBEA1DBD7F0DE5"'
+      - '"0x8DBD08296E5901F"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:25 GMT
+      - Thu, 19 Oct 2023 09:05:49 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -136,7 +141,7 @@ interactions:
 - request:
     body: '<?xml version=''1.0'' encoding=''utf-8''?>
 
-      <KeyInfo><Start>2023-11-20T23:09:25Z</Start><Expiry>2023-11-21T00:09:00Z</Expiry></KeyInfo>'
+      <KeyInfo><Start>2023-10-19T09:05:50Z</Start><Expiry>2023-10-19T10:05:00Z</Expiry></KeyInfo>'
     headers:
       Accept:
       - application/xml
@@ -153,21 +158,22 @@ interactions:
       ParameterSetName:
       - --account-name -n -f --expiry --permissions --https-only --as-user --auth-mode
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.14.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.14.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:25 GMT
+      - Thu, 19 Oct 2023 09:05:50 GMT
       x-ms-version:
       - '2021-08-06'
     method: POST
     uri: https://clitest000002.blob.core.windows.net/?restype=service&comp=userdelegationkey
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><UserDelegationKey><SignedOid>7338c4fc-37a1-4728-972b-2d0fafc043ea</SignedOid><SignedTid>72f988bf-86f1-41af-91ab-2d7cd011db47</SignedTid><SignedStart>2023-11-20T23:09:25Z</SignedStart><SignedExpiry>2023-11-21T00:09:00Z</SignedExpiry><SignedService>b</SignedService><SignedVersion>2021-08-06</SignedVersion><Value>C75Hl7X7OrmM3RS9Au9a34lUC1EgYfLP+4mZ7q/qFbE=</Value></UserDelegationKey>"
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><UserDelegationKey><SignedOid>6b30bdc6-696a-46fb-82d7-739c2fb147b7</SignedOid><SignedTid>54826b22-38d6-4fb2-bad9-b7b93a3e9c5a</SignedTid><SignedStart>2023-10-19T09:05:50Z</SignedStart><SignedExpiry>2023-10-19T10:05:00Z</SignedExpiry><SignedService>b</SignedService><SignedVersion>2021-08-06</SignedVersion><Value>kIMJTErFUVebD6Ybo8dX7/R3j51dJIb3Cryi+rPHXEo=</Value></UserDelegationKey>"
     headers:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:09:27 GMT
+      - Thu, 19 Oct 2023 09:05:50 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
