--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_access_scenarios.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_access_scenarios.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:11:04.6193674Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:11:04.6193674Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:01:56.4461296Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:01:56.4461296Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:16 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
       - '11998'
-      x-msedge-ref:
-      - 'Ref A: E6B730E16BF24D839BC0EAED395B9E7D Ref B: CO6AA3150217053 Ref C: 2023-11-20T23:11:25Z'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:17 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:11:24 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       etag:
-      - '"0x8DBEA1E04E0110F"'
+      - '"0x8DBD08218B8B7D9"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -105,9 +109,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -119,11 +124,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:11:24 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       etag:
-      - '"0x8DBEA1E0518B55B"'
+      - '"0x8DBD0821918896F"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -147,9 +152,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -165,11 +171,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       etag:
-      - '"0x8DBEA1E0518B55B"'
+      - '"0x8DBD0821918896F"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -179,7 +185,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       x-ms-group:
       - $superuser
       x-ms-lease-state:
@@ -213,9 +219,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:19 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -225,11 +232,11 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       etag:
-      - '"0x8DBEA1E0518B55B"'
+      - '"0x8DBD0821918896F"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-acl:
@@ -259,9 +266,10 @@ interactions:
       ParameterSetName:
       - -n -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:19 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -275,11 +283,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:19 GMT
       etag:
-      - '"0x8DBEA1E0516BCE0"'
+      - '"0x8DBD0821916B77B"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -289,7 +297,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       x-ms-group:
       - $superuser
       x-ms-lease-state:
@@ -325,9 +333,10 @@ interactions:
       ParameterSetName:
       - -n -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:19 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -337,11 +346,11 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:19 GMT
       etag:
-      - '"0x8DBEA1E0516BCE0"'
+      - '"0x8DBD0821916B77B"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-acl:
@@ -373,11 +382,12 @@ interactions:
       ParameterSetName:
       - -f -p --acl --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-acl:
       - user::rwx,group::r--,other::---
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:20 GMT
       x-ms-version:
       - '2021-08-06'
     method: PATCH
@@ -389,11 +399,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:19 GMT
       etag:
-      - '"0x8DBEA1E04E7830D"'
+      - '"0x8DBD08218C85270"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-namespace-enabled:
@@ -417,9 +427,10 @@ interactions:
       ParameterSetName:
       - -f -p --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:27 GMT
+      - Thu, 19 Oct 2023 09:02:20 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -429,11 +440,11 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:11:26 GMT
+      - Thu, 19 Oct 2023 09:02:20 GMT
       etag:
-      - '"0x8DBEA1E04E7830D"'
+      - '"0x8DBD08218C85270"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-acl:
@@ -465,9 +476,10 @@ interactions:
       ParameterSetName:
       - -f -p --permissions --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:27 GMT
+      - Thu, 19 Oct 2023 09:02:21 GMT
       x-ms-permissions:
       - rwxrwxrwx
       x-ms-version:
@@ -481,11 +493,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:11:27 GMT
+      - Thu, 19 Oct 2023 09:02:21 GMT
       etag:
-      - '"0x8DBEA1E0518B55B"'
+      - '"0x8DBD0821918896F"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-namespace-enabled:
@@ -509,9 +521,10 @@ interactions:
       ParameterSetName:
       - -f -p --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:27 GMT
+      - Thu, 19 Oct 2023 09:02:21 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -521,11 +534,11 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:11:27 GMT
+      - Thu, 19 Oct 2023 09:02:21 GMT
       etag:
-      - '"0x8DBEA1E0518B55B"'
+      - '"0x8DBD0821918896F"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:25 GMT
+      - Thu, 19 Oct 2023 09:02:18 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-acl:
