--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_file_set_expiry_scenarios.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_file_set_expiry_scenarios.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:07:32.4449903Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:07:32.4449903Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:03:44.7449371Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:03:44.7449371Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:07:52 GMT
+      - Thu, 19 Oct 2023 09:04:05 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11999'
-      x-msedge-ref:
-      - 'Ref A: 9A33AEE97F9E4F84A76BC5B056ABEC7F Ref B: CO6AA3150217021 Ref C: 2023-11-20T23:07:53Z'
+      - '11992'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:06 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:07:52 GMT
+      - Thu, 19 Oct 2023 09:04:06 GMT
       etag:
-      - '"0x8DBEA1D86803B7A"'
+      - '"0x8DBD08259621AC5"'
       last-modified:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:06 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -105,11 +109,12 @@ interactions:
       ParameterSetName:
       - -p -f --content-type --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-content-type:
       - application/json
       x-ms-date:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:06 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -121,11 +126,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:07:52 GMT
+      - Thu, 19 Oct 2023 09:04:06 GMT
       etag:
-      - '"0x8DBEA1D86B466F2"'
+      - '"0x8DBD08259B1F539"'
       last-modified:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -151,13 +156,14 @@ interactions:
       ParameterSetName:
       - --expiry-options --expires-on -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       x-ms-expiry-option:
       - Absolute
       x-ms-expiry-time:
-      - Mon, 20 Nov 2023 23:07:58 GMT
+      - Thu, 19 Oct 2023 09:04:12 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -169,11 +175,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:07:54 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       etag:
-      - '"0x8DBEA1D86B466F2"'
+      - '"0x8DBD08259B1F539"'
       last-modified:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -195,9 +201,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:07:54 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -213,11 +220,11 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       etag:
-      - '"0x8DBEA1D86B466F2"'
+      - '"0x8DBD08259B1F539"'
       last-modified:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -227,9 +234,9 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:07:53 GMT
+      - Thu, 19 Oct 2023 09:04:07 GMT
       x-ms-expiry-time:
-      - Mon, 20 Nov 2023 23:07:58 GMT
+      - Thu, 19 Oct 2023 09:04:12 GMT
       x-ms-group:
       - $superuser
       x-ms-lease-state:
@@ -263,9 +270,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -275,7 +283,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -303,11 +311,12 @@ interactions:
       ParameterSetName:
       - -p -f --content-type --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-content-type:
       - application/json
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -319,11 +328,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       etag:
-      - '"0x8DBEA1D8B9420C2"'
+      - '"0x8DBD0825EC2FFD1"'
       last-modified:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -349,9 +358,10 @@ interactions:
       ParameterSetName:
       - --expiry-options --expires-on -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       x-ms-expiry-option:
       - RelativeToCreation
       x-ms-expiry-time:
@@ -367,11 +377,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:08:02 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       etag:
-      - '"0x8DBEA1D8B9420C2"'
+      - '"0x8DBD0825EC2FFD1"'
       last-modified:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -393,9 +403,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:02 GMT
+      - Thu, 19 Oct 2023 09:04:16 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -411,11 +422,11 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:08:02 GMT
+      - Thu, 19 Oct 2023 09:04:16 GMT
       etag:
-      - '"0x8DBEA1D8B9420C2"'
+      - '"0x8DBD0825EC2FFD1"'
       last-modified:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -425,9 +436,9 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:08:01 GMT
+      - Thu, 19 Oct 2023 09:04:15 GMT
       x-ms-expiry-time:
-      - Mon, 20 Nov 2023 23:08:06 GMT
+      - Thu, 19 Oct 2023 09:04:20 GMT
       x-ms-group:
       - $superuser
       x-ms-lease-state:
@@ -461,9 +472,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:09 GMT
+      - Thu, 19 Oct 2023 09:04:23 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -473,7 +485,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:08:09 GMT
+      - Thu, 19 Oct 2023 09:04:23 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
