--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_metadata_scenarios.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_metadata_scenarios.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:08:38.3049414Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:08:38.3049414Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:04:55.3865372Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:04:55.3865372Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,19 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:08:58 GMT
+      - Thu, 19 Oct 2023 09:05:19 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11999'
-      x-msedge-ref:
-      - 'Ref A: D575BF75C2A14BD9926FE562716C9255 Ref B: CO6AA3150217025 Ref C: 2023-11-20T23:08:58Z'
+      - '11992'
     status:
       code: 200
       message: OK
@@ -63,9 +62,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:20 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -77,11 +77,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:19 GMT
       etag:
-      - '"0x8DBEA1DADC7C661"'
+      - '"0x8DBD082856EB22E"'
       last-modified:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:20 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -105,9 +105,10 @@ interactions:
       ParameterSetName:
       - -n --metadata --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:20 GMT
       x-ms-meta-a:
       - b
       x-ms-meta-c:
@@ -123,11 +124,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:20 GMT
       etag:
-      - '"0x8DBEA1DADF5D341"'
+      - '"0x8DBD08285B93E43"'
       last-modified:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -149,9 +150,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       x-ms-version:
       - '2021-08-06'
     method: GET
@@ -163,11 +165,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:20 GMT
       etag:
-      - '"0x8DBEA1DADF5D341"'
+      - '"0x8DBD08285B93E43"'
       last-modified:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-default-encryption-scope:
@@ -209,9 +211,10 @@ interactions:
       ParameterSetName:
       - -n -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -223,11 +226,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:20 GMT
       etag:
-      - '"0x8DBEA1DAE4642ED"'
+      - '"0x8DBD082862A999D"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -253,9 +256,10 @@ interactions:
       ParameterSetName:
       - -n -f --metadata --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       x-ms-meta-foo:
       - bar
       x-ms-meta-moo:
@@ -271,11 +275,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:08:59 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       etag:
-      - '"0x8DBEA1DAE6D3845"'
+      - '"0x8DBD08286636347"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -299,9 +303,10 @@ interactions:
       ParameterSetName:
       - -n -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -317,11 +322,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       etag:
-      - '"0x8DBEA1DAE6D3845"'
+      - '"0x8DBD08286636347"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -331,7 +336,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:21 GMT
       x-ms-group:
       - $superuser
       x-ms-lease-state:
@@ -373,9 +378,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -387,11 +393,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       etag:
-      - '"0x8DBEA1DAEB7C8FC"'
+      - '"0x8DBD08286D34860"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -417,9 +423,10 @@ interactions:
       ParameterSetName:
       - -p -f --metadata --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:23 GMT
       x-ms-meta-cat:
       - file
       x-ms-meta-test:
@@ -435,11 +442,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       etag:
-      - '"0x8DBEA1DAEE26DA2"'
+      - '"0x8DBD082871CCDC2"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:01 GMT
+      - Thu, 19 Oct 2023 09:05:23 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -463,9 +470,10 @@ interactions:
       ParameterSetName:
       - -p -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:09:01 GMT
+      - Thu, 19 Oct 2023 09:05:23 GMT
       x-ms-version:
       - '2021-08-06'
     method: HEAD
@@ -481,11 +489,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:09:01 GMT
+      - Thu, 19 Oct 2023 09:05:23 GMT
       etag:
-      - '"0x8DBEA1DAEE26DA2"'
+      - '"0x8DBD082871CCDC2"'
       last-modified:
-      - Mon, 20 Nov 2023 23:09:01 GMT
+      - Thu, 19 Oct 2023 09:05:23 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -495,7 +503,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:09:00 GMT
+      - Thu, 19 Oct 2023 09:05:22 GMT
       x-ms-group:
       - $superuser
       x-ms-lease-state:
