--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_delete_snapshot.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_delete_snapshot.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:15:06.4344316Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:15:06.4344316Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:08:33.2327604Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:08:33.2327604Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:15:29 GMT
+      - Thu, 19 Oct 2023 09:08:54 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11999'
-      x-msedge-ref:
-      - 'Ref A: 01F7D4E00A71454CAE3C057098381306 Ref B: CO6AA3150220029 Ref C: 2023-11-20T23:15:29Z'
+      - '11991'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:29 GMT
+      - Thu, 19 Oct 2023 09:08:54 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:29 GMT
+      - Thu, 19 Oct 2023 09:08:54 GMT
       etag:
-      - '"0x8DBEA1E96C51673"'
+      - '"0x8DBD083053BFF63"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -109,11 +113,12 @@ interactions:
       ParameterSetName:
       - -c -f -n --type --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -127,11 +132,11 @@ interactions:
       content-md5:
       - DzQ7CTESaiDxM9Z8KwGKOw==
       date:
-      - Mon, 20 Nov 2023 23:15:29 GMT
+      - Thu, 19 Oct 2023 09:08:54 GMT
       etag:
-      - '"0x8DBEA1E96E7B288"'
+      - '"0x8DBD0830583C420"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-content-crc64:
@@ -157,9 +162,10 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
@@ -167,9 +173,9 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Mon,
-        20 Nov 2023 23:15:30 GMT</Creation-Time><Last-Modified>Mon, 20 Nov 2023 23:15:30
-        GMT</Last-Modified><Etag>0x8DBEA1E96E7B288</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Thu,
+        19 Oct 2023 09:08:55 GMT</Creation-Time><Last-Modified>Thu, 19 Oct 2023 09:08:55
+        GMT</Last-Modified><Etag>0x8DBD0830583C420</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5>DzQ7CTESaiDxM9Z8KwGKOw==</Content-MD5><Cache-Control
         /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -177,7 +183,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -203,9 +209,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -217,17 +224,17 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       etag:
-      - '"0x8DBEA1E96E7B288"'
+      - '"0x8DBD0830583C420"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
       - 'false'
       x-ms-snapshot:
-      - '2023-11-20T23:15:30.9013755Z'
+      - '2023-10-19T09:08:56.2100166Z'
       x-ms-version:
       - '2022-11-02'
     status:
@@ -247,13 +254,14 @@ interactions:
       ParameterSetName:
       - -c -n --snapshot --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:56 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?snapshot=2023-11-20T23:15:30.9013755Z
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?snapshot=2023-10-19T09:08:56.2100166Z
   response:
     body:
       string: ''
@@ -267,11 +275,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       etag:
-      - '"0x8DBEA1E96E7B288"'
+      - '"0x8DBD0830583C420"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -281,7 +289,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       x-ms-server-encrypted:
       - 'true'
       x-ms-version:
@@ -305,9 +313,10 @@ interactions:
       ParameterSetName:
       - -c -n --delete-snapshots --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:56 GMT
       x-ms-delete-snapshots:
       - only
       x-ms-version:
@@ -321,7 +330,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:56 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-delete-type-permanent:
@@ -345,19 +354,20 @@ interactions:
       ParameterSetName:
       - -c -n --snapshot --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:57 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?snapshot=2023-11-20T23:15:30.9013755Z
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?snapshot=2023-10-19T09:08:56.2100166Z
   response:
     body:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:57 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -383,9 +393,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:57 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -403,11 +414,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:57 GMT
       etag:
-      - '"0x8DBEA1E96E7B288"'
+      - '"0x8DBD0830583C420"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -417,7 +428,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -445,9 +456,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:57 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -459,17 +471,17 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:57 GMT
       etag:
-      - '"0x8DBEA1E96E7B288"'
+      - '"0x8DBD0830583C420"'
       last-modified:
-      - Mon, 20 Nov 2023 23:15:30 GMT
+      - Thu, 19 Oct 2023 09:08:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
       - 'false'
       x-ms-snapshot:
-      - '2023-11-20T23:15:31.9876044Z'
+      - '2023-10-19T09:08:58.1644521Z'
       x-ms-version:
       - '2022-11-02'
     status:
@@ -491,9 +503,10 @@ interactions:
       ParameterSetName:
       - -c -n --delete-snapshots --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:58 GMT
       x-ms-delete-snapshots:
       - include
       x-ms-version:
@@ -507,7 +520,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:15:32 GMT
+      - Thu, 19 Oct 2023 09:08:58 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-delete-type-permanent:
@@ -531,9 +544,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:15:32 GMT
+      - Thu, 19 Oct 2023 09:08:58 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -543,7 +557,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:15:31 GMT
+      - Thu, 19 Oct 2023 09:08:58 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
