--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_lease_operations.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_lease_operations.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:11:48.8073833Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:11:48.8073833Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:11:09.2499586Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:11:09.2499586Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:30 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11997'
-      x-msedge-ref:
-      - 'Ref A: 7E6E75BAF9624A8B8FAC61A152F99B9C Ref B: CO6AA3150218023 Ref C: 2023-11-20T23:12:09Z'
+      - '11988'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:30 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:12:08 GMT
+      - Thu, 19 Oct 2023 09:11:30 GMT
       etag:
-      - '"0x8DBEA1E1F317188"'
+      - '"0x8DBD08362290A92"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:30 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -109,11 +113,12 @@ interactions:
       ParameterSetName:
       - -c -n -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -127,11 +132,11 @@ interactions:
       content-md5:
       - DfvoqkwgtS4bi/PLbL3xkw==
       date:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       etag:
-      - '"0x8DBEA1E1F6651AF"'
+      - '"0x8DBD083628B3234"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-content-crc64:
@@ -162,9 +167,10 @@ interactions:
       - --lease-duration -b -c --if-modified-since --proposed-lease-id --account-name
         --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       x-ms-lease-action:
       - acquire
       x-ms-lease-duration:
@@ -182,11 +188,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       etag:
-      - '"0x8DBEA1E1F6651AF"'
+      - '"0x8DBD083628B3234"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-id:
@@ -210,9 +216,10 @@ interactions:
       ParameterSetName:
       - -n -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:32 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -230,17 +237,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       etag:
-      - '"0x8DBEA1E1F6651AF"'
+      - '"0x8DBD083628B3234"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       x-ms-lease-duration:
       - fixed
       x-ms-lease-state:
@@ -270,9 +277,10 @@ interactions:
       ParameterSetName:
       - -b -c --lease-id --proposed-lease-id --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:32 GMT
       x-ms-lease-action:
       - change
       x-ms-lease-id:
@@ -290,11 +298,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       etag:
-      - '"0x8DBEA1E1F6651AF"'
+      - '"0x8DBD083628B3234"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-id:
@@ -320,9 +328,10 @@ interactions:
       ParameterSetName:
       - -b -c --lease-id --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:32 GMT
       x-ms-lease-action:
       - renew
       x-ms-lease-id:
@@ -338,11 +347,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:32 GMT
       etag:
-      - '"0x8DBEA1E1F6651AF"'
+      - '"0x8DBD083628B3234"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-id:
@@ -366,9 +375,10 @@ interactions:
       ParameterSetName:
       - -n -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -386,17 +396,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:32 GMT
       etag:
-      - '"0x8DBEA1E1F6651AF"'
+      - '"0x8DBD083628B3234"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       x-ms-lease-duration:
       - fixed
       x-ms-lease-state:
@@ -426,9 +436,10 @@ interactions:
       ParameterSetName:
       - -n -c --metadata --lease-id --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       x-ms-lease-id:
       - dcbadcba-dcba-dcba-dcba-dcbadcbadcba
       x-ms-meta-key1:
@@ -444,11 +455,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       etag:
-      - '"0x8DBEA1E2049DA1D"'
+      - '"0x8DBD08363EBEE21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -472,9 +483,10 @@ interactions:
       ParameterSetName:
       - -n -c --lease-id --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       x-ms-lease-id:
       - dcbadcba-dcba-dcba-dcba-dcbadcbadcba
       x-ms-version:
@@ -494,17 +506,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:12:10 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       etag:
-      - '"0x8DBEA1E2049DA1D"'
+      - '"0x8DBD08363EBEE21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       x-ms-lease-duration:
       - fixed
       x-ms-lease-state:
@@ -536,9 +548,10 @@ interactions:
       ParameterSetName:
       - -b -c --lease-break-period --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:34 GMT
       x-ms-lease-action:
       - break
       x-ms-lease-break-period:
@@ -554,11 +567,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:34 GMT
       etag:
-      - '"0x8DBEA1E2049DA1D"'
+      - '"0x8DBD08363EBEE21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-time:
@@ -582,9 +595,10 @@ interactions:
       ParameterSetName:
       - -n -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:34 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -602,17 +616,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:34 GMT
       etag:
-      - '"0x8DBEA1E2049DA1D"'
+      - '"0x8DBD08363EBEE21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       x-ms-lease-state:
       - breaking
       x-ms-lease-status:
@@ -642,9 +656,10 @@ interactions:
       ParameterSetName:
       - -b -c --lease-id --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:12 GMT
+      - Thu, 19 Oct 2023 09:11:35 GMT
       x-ms-lease-action:
       - release
       x-ms-lease-id:
@@ -660,11 +675,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:35 GMT
       etag:
-      - '"0x8DBEA1E2049DA1D"'
+      - '"0x8DBD08363EBEE21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -686,9 +701,10 @@ interactions:
       ParameterSetName:
       - -n -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:12:12 GMT
+      - Thu, 19 Oct 2023 09:11:35 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -706,17 +722,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:35 GMT
       etag:
-      - '"0x8DBEA1E2049DA1D"'
+      - '"0x8DBD08363EBEE21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:12:11 GMT
+      - Thu, 19 Oct 2023 09:11:33 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:12:09 GMT
+      - Thu, 19 Oct 2023 09:11:31 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
