--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_snapshot_operations.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_snapshot_operations.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:12:40.3079477Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:12:40.3079477Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:12:09.0942339Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:12:09.0942339Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:13:00 GMT
+      - Thu, 19 Oct 2023 09:12:30 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11999'
-      x-msedge-ref:
-      - 'Ref A: F5532086CF28423EBAA589A5B71FEDDC Ref B: CO6AA3150220011 Ref C: 2023-11-20T23:13:01Z'
+      - '11986'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:01 GMT
+      - Thu, 19 Oct 2023 09:12:31 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:13:01 GMT
+      - Thu, 19 Oct 2023 09:12:30 GMT
       etag:
-      - '"0x8DBEA1E3E457D86"'
+      - '"0x8DBD0838641936A"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:01 GMT
+      - Thu, 19 Oct 2023 09:12:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -109,11 +113,12 @@ interactions:
       ParameterSetName:
       - -c -n -f --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:01 GMT
+      - Thu, 19 Oct 2023 09:12:31 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -127,11 +132,11 @@ interactions:
       content-md5:
       - DfvoqkwgtS4bi/PLbL3xkw==
       date:
-      - Mon, 20 Nov 2023 23:13:01 GMT
+      - Thu, 19 Oct 2023 09:12:31 GMT
       etag:
-      - '"0x8DBEA1E3E7440C9"'
+      - '"0x8DBD08386A7FFA0"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-content-crc64:
@@ -159,9 +164,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -173,17 +179,17 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       etag:
-      - '"0x8DBEA1E3E7440C9"'
+      - '"0x8DBD08386A7FFA0"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
       - 'false'
       x-ms-snapshot:
-      - '2023-11-20T23:13:02.3130372Z'
+      - '2023-10-19T09:12:32.5165043Z'
       x-ms-version:
       - '2022-11-02'
     status:
@@ -203,13 +209,14 @@ interactions:
       ParameterSetName:
       - -n -c --snapshot --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?snapshot=2023-11-20T23:13:02.3130372Z
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?snapshot=2023-10-19T09:12:32.5165043Z
   response:
     body:
       string: ''
@@ -223,17 +230,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       etag:
-      - '"0x8DBEA1E3E7440C9"'
+      - '"0x8DBD08386A7FFA0"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:13:02 GMT
+      - Thu, 19 Oct 2023 09:12:32 GMT
       x-ms-server-encrypted:
       - 'true'
       x-ms-version:
