--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_file_copy_snapshot_scenario.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_file_copy_snapshot_scenario.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:18:20.8467325Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:18:20.8467325Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:47:26.4417320Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:47:26.4417320Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:18:40 GMT
+      - Thu, 19 Oct 2023 09:47:45 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
-      x-msedge-ref:
-      - 'Ref A: 5E153F4274864A838F08456EC0A08CA8 Ref B: CO6AA3150218031 Ref C: 2023-11-20T23:18:40Z'
+      - '11981'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:40 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:45 GMT
       etag:
-      - '"0x8DBEA1F08AD9E9D"'
+      - '"0x8DBD08872B4F942"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -105,9 +109,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -119,11 +124,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:45 GMT
       etag:
-      - '"0x8DBEA1F08F81BFB"'
+      - '"0x8DBD08872DDAA69"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -147,11 +152,10 @@ interactions:
       ParameterSetName:
       - --share-name -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -171,27 +175,27 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:45 GMT
       etag:
-      - '"0x8DBEA1F0943E79A"'
+      - '"0x8DBD08872FC53E1"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:42 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Directory
       x-ms-file-change-time:
-      - '2023-11-20T23:18:42.3388058Z'
+      - '2023-10-19T09:47:46.6325985Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:18:42.3388058Z'
+      - '2023-10-19T09:47:46.6325985Z'
       x-ms-file-id:
       - '13835128424026341376'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:18:42.3388058Z'
+      - '2023-10-19T09:47:46.6325985Z'
       x-ms-file-parent-id:
       - '0'
       x-ms-file-permission-key:
-      - 13569331522217764425*15318102650119483840
+      - 5536887570206392067*2597978829720316042
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -215,11 +219,10 @@ interactions:
       ParameterSetName:
       - --share-name -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:42 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -239,27 +242,27 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:42 GMT
+      - Thu, 19 Oct 2023 09:47:45 GMT
       etag:
-      - '"0x8DBEA1F0990EDC1"'
+      - '"0x8DBD0887314C96B"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:42 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Directory
       x-ms-file-change-time:
-      - '2023-11-20T23:18:42.8435905Z'
+      - '2023-10-19T09:47:46.7928939Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:18:42.8435905Z'
+      - '2023-10-19T09:47:46.7928939Z'
       x-ms-file-id:
       - '13835128424026341376'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:18:42.8435905Z'
+      - '2023-10-19T09:47:46.7928939Z'
       x-ms-file-parent-id:
       - '0'
       x-ms-file-permission-key:
-      - 13569331522217764425*15318102650119483840
+      - 5536887570206392067*2597978829720316042
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -283,13 +286,12 @@ interactions:
       ParameterSetName:
       - -p --share-name --source --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-content-length:
       - '524288'
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:42 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -311,27 +313,27 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:42 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       etag:
-      - '"0x8DBEA1F09DD7F48"'
+      - '"0x8DBD088732CF136"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:43 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:18:43.3453896Z'
+      - '2023-10-19T09:47:46.9511990Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:18:43.3453896Z'
+      - '2023-10-19T09:47:46.9511990Z'
       x-ms-file-id:
       - '13835093239654252544'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:18:43.3453896Z'
+      - '2023-10-19T09:47:46.9511990Z'
       x-ms-file-parent-id:
       - '13835128424026341376'
       x-ms-file-permission-key:
-      - 8949845919755049294*15318102650119483840
+      - 10136819610756513796*2597978829720316042
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -357,11 +359,10 @@ interactions:
       ParameterSetName:
       - -p --share-name --source --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:43 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       x-ms-range:
       - bytes=0-524287
       x-ms-version:
@@ -379,15 +380,15 @@ interactions:
       content-md5:
       - WQcVkAmdId1DmJZZIzi/lQ==
       date:
-      - Mon, 20 Nov 2023 23:18:43 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       etag:
-      - '"0x8DBEA1F0A315B95"'
+      - '"0x8DBD0887334FE7A"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:43 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-last-write-time:
-      - '2023-11-20T23:18:43.8949781Z'
+      - '2023-10-19T09:47:47.0039674Z'
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -409,11 +410,10 @@ interactions:
       ParameterSetName:
       - -p -s --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:43 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -427,27 +427,27 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:18:43 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       etag:
-      - '"0x8DBEA1F0A315B95"'
+      - '"0x8DBD0887334FE7A"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:43 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:18:43.8949781Z'
+      - '2023-10-19T09:47:47.0039674Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:18:43.3453896Z'
+      - '2023-10-19T09:47:46.9511990Z'
       x-ms-file-id:
       - '13835093239654252544'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:18:43.8949781Z'
+      - '2023-10-19T09:47:47.0039674Z'
       x-ms-file-parent-id:
       - '13835128424026341376'
       x-ms-file-permission-key:
-      - 8949845919755049294*15318102650119483840
+      - 10136819610756513796*2597978829720316042
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -477,9 +477,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:44 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -491,15 +492,15 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:44 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       etag:
-      - '"0x8DBEA1F08AD9E9D"'
+      - '"0x8DBD08872B4F942"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:41 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-snapshot:
-      - '2023-11-20T23:18:44.0000000Z'
+      - '2023-10-19T09:47:47.0000000Z'
       x-ms-version:
       - '2022-11-02'
     status:
@@ -521,11 +522,10 @@ interactions:
       ParameterSetName:
       - --share-name -p --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:44 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       x-ms-version:
       - '2022-11-02'
     method: DELETE
@@ -537,7 +537,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:44 GMT
+      - Thu, 19 Oct 2023 09:47:46 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -559,11 +559,10 @@ interactions:
       ParameterSetName:
       - -p -s --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:45 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -573,7 +572,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Mon, 20 Nov 2023 23:18:45 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -601,15 +600,12 @@ interactions:
       ParameterSetName:
       - -s -p --source-share --source-path --file-snapshot --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-copy-source:
-      - https://clitestlpvhau5rzmgv6m5zd.file.core.windows.net/share7zlixyjau4ubxvht6wu/dir1%5Csource_file.txt?sharesnapshot=2023-11-20T23:18:44.0000000Z
+      - https://clitestqrbutp6ylgdvspmc2.file.core.windows.net/sharekxhkvb6pgdnshv6dytv/dir1/source_file.txt?sharesnapshot=2023-10-19T09:47:47.0000000Z
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:46 GMT
-      x-ms-source-allow-trailing-dot:
-      - 'true'
+      - Thu, 19 Oct 2023 09:47:47 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -621,15 +617,15 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:18:46 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       etag:
-      - '"0x8DBEA1F0BE33ECB"'
+      - '"0x8DBD08873D1042D"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:46 GMT
+      - Thu, 19 Oct 2023 09:47:48 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-copy-id:
-      - d4365be9-ec12-4f77-b5be-6441b5582f2a
+      - 00bb8ace-7c92-4cc0-aa3b-566c3808c1fd
       x-ms-copy-status:
       - success
       x-ms-version:
@@ -651,11 +647,10 @@ interactions:
       ParameterSetName:
       - --share-name -p --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:18:46 GMT
+      - Thu, 19 Oct 2023 09:47:48 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -669,37 +664,37 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:18:47 GMT
+      - Thu, 19 Oct 2023 09:47:47 GMT
       etag:
-      - '"0x8DBEA1F0BE33ECB"'
+      - '"0x8DBD08873D1042D"'
       last-modified:
-      - Mon, 20 Nov 2023 23:18:46 GMT
+      - Thu, 19 Oct 2023 09:47:48 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-copy-completion-time:
-      - Mon, 20 Nov 2023 23:18:46 GMT
+      - Thu, 19 Oct 2023 09:47:48 GMT
       x-ms-copy-id:
-      - d4365be9-ec12-4f77-b5be-6441b5582f2a
+      - 00bb8ace-7c92-4cc0-aa3b-566c3808c1fd
       x-ms-copy-progress:
       - 524288/524288
       x-ms-copy-source:
-      - https://clitestlpvhau5rzmgv6m5zd.file.core.windows.net/share7zlixyjau4ubxvht6wu/dir1%5Csource_file.txt?sharesnapshot=2023-11-20T23:18:44.0000000Z
+      - https://clitestqrbutp6ylgdvspmc2.file.core.windows.net/sharekxhkvb6pgdnshv6dytv/dir1/source_file.txt?sharesnapshot=2023-10-19T09:47:47.0000000Z
       x-ms-copy-status:
       - success
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:18:46.7385035Z'
+      - '2023-10-19T09:47:48.0264749Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:18:46.7385035Z'
+      - '2023-10-19T09:47:48.0264749Z'
       x-ms-file-id:
       - '13835093239654252544'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:18:46.7385035Z'
+      - '2023-10-19T09:47:48.0264749Z'
       x-ms-file-parent-id:
       - '13835128424026341376'
       x-ms-file-permission-key:
-      - 8949845919755049294*15318102650119483840
+      - 10136819610756513796*2597978829720316042
       x-ms-lease-state:
       - available
       x-ms-lease-status:
