--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_file_upload_content_md5_scenarios.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_file_upload_content_md5_scenarios.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:19:16.5158050Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:19:16.5158050Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:48:49.4702163Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:48:49.4702163Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:19:36 GMT
+      - Thu, 19 Oct 2023 09:49:10 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
-      x-msedge-ref:
-      - 'Ref A: 57EA8428E9C443F2B062279FDE518996 Ref B: CO6AA3150219045 Ref C: 2023-11-20T23:19:36Z'
+      - '11954'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:10 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:19:36 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       etag:
-      - '"0x8DBEA1F2A087828"'
+      - '"0x8DBD088A55C450A"'
       last-modified:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -105,15 +109,14 @@ interactions:
       ParameterSetName:
       - -s --source --path --content-md5 --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-content-length:
       - '131072'
       x-ms-content-md5:
       - DfvoqkwgtS4bi/PLbL3xkw==
       x-ms-date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -135,27 +138,27 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       etag:
-      - '"0x8DBEA1F2A3965B1"'
+      - '"0x8DBD088A5A50044"'
       last-modified:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:19:37.6347569Z'
+      - '2023-10-19T09:49:11.6240964Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:19:37.6347569Z'
+      - '2023-10-19T09:49:11.6240964Z'
       x-ms-file-id:
       - '13835128424026341376'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:19:37.6347569Z'
+      - '2023-10-19T09:49:11.6240964Z'
       x-ms-file-parent-id:
       - '0'
       x-ms-file-permission-key:
-      - 11467511903585991991*4000358721931941305
+      - 274927706933919817*12353467285667080391
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -181,11 +184,10 @@ interactions:
       ParameterSetName:
       - -s --source --path --content-md5 --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       x-ms-range:
       - bytes=0-131071
       x-ms-version:
@@ -203,15 +205,15 @@ interactions:
       content-md5:
       - DfvoqkwgtS4bi/PLbL3xkw==
       date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       etag:
-      - '"0x8DBEA1F2A59B9E5"'
+      - '"0x8DBD088A5CF3C21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-last-write-time:
-      - '2023-11-20T23:19:37.8466277Z'
+      - '2023-10-19T09:49:11.9008801Z'
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -233,11 +235,10 @@ interactions:
       ParameterSetName:
       - -s --path --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -253,27 +254,27 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       etag:
-      - '"0x8DBEA1F2A59B9E5"'
+      - '"0x8DBD088A5CF3C21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:19:37.8466277Z'
+      - '2023-10-19T09:49:11.9008801Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:19:37.6347569Z'
+      - '2023-10-19T09:49:11.6240964Z'
       x-ms-file-id:
       - '13835128424026341376'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:19:37.8466277Z'
+      - '2023-10-19T09:49:11.9008801Z'
       x-ms-file-parent-id:
       - '0'
       x-ms-file-permission-key:
-      - 11467511903585991991*4000358721931941305
+      - 274927706933919817*12353467285667080391
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -301,9 +302,10 @@ interactions:
       ParameterSetName:
       - -s --path --content-md5 --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:19:38 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -319,27 +321,27 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       etag:
-      - '"0x8DBEA1F2A59B9E5"'
+      - '"0x8DBD088A5CF3C21"'
       last-modified:
-      - Mon, 20 Nov 2023 23:19:37 GMT
+      - Thu, 19 Oct 2023 09:49:11 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:19:37.8466277Z'
+      - '2023-10-19T09:49:11.9008801Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:19:37.6347569Z'
+      - '2023-10-19T09:49:11.6240964Z'
       x-ms-file-id:
       - '13835128424026341376'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:19:37.8466277Z'
+      - '2023-10-19T09:49:11.9008801Z'
       x-ms-file-parent-id:
       - '0'
       x-ms-file-permission-key:
-      - 11467511903585991991*4000358721931941305
+      - 274927706933919817*12353467285667080391
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -369,15 +371,14 @@ interactions:
       ParameterSetName:
       - -s --path --content-md5 --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-content-md5:
       - '0000'
       x-ms-content-type:
       - application/octet-stream
       x-ms-date:
-      - Mon, 20 Nov 2023 23:19:38 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       x-ms-file-attributes:
       - preserve
       x-ms-file-creation-time:
@@ -397,27 +398,27 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:19:38 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       etag:
-      - '"0x8DBEA1F2AC89721"'
+      - '"0x8DBD088A6710795"'
       last-modified:
-      - Mon, 20 Nov 2023 23:19:38 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:19:38.5731873Z'
+      - '2023-10-19T09:49:12.9612181Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:19:37.6347569Z'
+      - '2023-10-19T09:49:11.6240964Z'
       x-ms-file-id:
       - '13835128424026341376'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:19:37.8466277Z'
+      - '2023-10-19T09:49:11.9008801Z'
       x-ms-file-parent-id:
       - '0'
       x-ms-file-permission-key:
-      - 11467511903585991991*4000358721931941305
+      - 274927706933919817*12353467285667080391
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -439,11 +440,10 @@ interactions:
       ParameterSetName:
       - -s --path --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-file-share/12.12.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
-      x-ms-allow-trailing-dot:
-      - 'true'
+      - AZURECLI/2.53.0 azsdk-python-storage-file-share/12.12.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:19:38 GMT
+      - Thu, 19 Oct 2023 09:49:13 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -459,27 +459,27 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:19:38 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       etag:
-      - '"0x8DBEA1F2AC89721"'
+      - '"0x8DBD088A6710795"'
       last-modified:
-      - Mon, 20 Nov 2023 23:19:38 GMT
+      - Thu, 19 Oct 2023 09:49:12 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-20T23:19:38.5731873Z'
+      - '2023-10-19T09:49:12.9612181Z'
       x-ms-file-creation-time:
-      - '2023-11-20T23:19:37.6347569Z'
+      - '2023-10-19T09:49:11.6240964Z'
       x-ms-file-id:
       - '13835128424026341376'
       x-ms-file-last-write-time:
-      - '2023-11-20T23:19:37.8466277Z'
+      - '2023-10-19T09:49:11.9008801Z'
       x-ms-file-parent-id:
       - '0'
       x-ms-file-permission-key:
-      - 11467511903585991991*4000358721931941305
+      - 274927706933919817*12353467285667080391
       x-ms-lease-state:
       - available
       x-ms-lease-status:
