--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_fs_generate_sas_full_uri.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_fs_generate_sas_full_uri.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:10:18.9469110Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:10:18.9469110Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:06:45.4347574Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:06:45.4347574Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:11:00 GMT
+      - Thu, 19 Oct 2023 09:07:07 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11999'
-      x-msedge-ref:
-      - 'Ref A: D76384D85D104A3AA642A9880C85C42F Ref B: CO6AA3150217045 Ref C: 2023-11-20T23:11:00Z'
+      - '11993'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-dfs/12.9.0b1 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-dfs/12.9.0b1 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:11:00 GMT
+      - Thu, 19 Oct 2023 09:07:07 GMT
       x-ms-version:
       - '2021-08-06'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:11:00 GMT
+      - Thu, 19 Oct 2023 09:07:07 GMT
       etag:
-      - '"0x8DBEA1DF64C0D96"'
+      - '"0x8DBD082C5453D49"'
       last-modified:
-      - Mon, 20 Nov 2023 23:11:01 GMT
+      - Thu, 19 Oct 2023 09:07:07 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
