--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_page_blob_set_tier.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_page_blob_set_tier.yaml
@@ -15,12 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-azure-mgmt-storage/21.0.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2022-09-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-11-20T23:13:08.9176304Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T23:13:08.9176304Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-10-19T09:15:07.2051697Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:15:07.2051697Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -29,21 +30,23 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 20 Nov 2023 23:13:28 GMT
+      - Thu, 19 Oct 2023 09:15:28 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
+      server:
+      - Microsoft-Azure-Storage-Resource-Provider/1.0,Microsoft-HTTPAPI/2.0 Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
-      x-msedge-ref:
-      - 'Ref A: 371424DB75EE40E686FA705B2602141F Ref B: CO6AA3150220047 Ref C: 2023-11-20T23:13:29Z'
+      - '11997'
     status:
       code: 200
       message: OK
@@ -63,9 +66,10 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:28 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -77,11 +81,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:28 GMT
       etag:
-      - '"0x8DBEA1E4EDDCB53"'
+      - '"0x8DBD083F02CB1A8"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -107,7 +111,8 @@ interactions:
       ParameterSetName:
       - -c -n -f -t --tier --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-access-tier:
       - P10
       x-ms-blob-content-length:
@@ -115,7 +120,7 @@ interactions:
       x-ms-blob-type:
       - PageBlob
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -127,11 +132,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:13:28 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       etag:
-      - '"0x8DBEA1E4F088505"'
+      - '"0x8DBD083F0732E15"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -155,9 +160,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -173,11 +179,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       etag:
-      - '"0x8DBEA1E4F088505"'
+      - '"0x8DBD083F0732E15"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -187,7 +193,7 @@ interactions:
       x-ms-blob-type:
       - PageBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -213,9 +219,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:30 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
@@ -227,11 +234,11 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       etag:
-      - '"0x8DBEA1E4F088505"'
+      - '"0x8DBD083F0732E15"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -259,11 +266,12 @@ interactions:
       ParameterSetName:
       - -c -n --tier -t --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-access-tier:
       - P20
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:30 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -275,7 +283,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -297,9 +305,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:30 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -315,11 +324,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Mon, 20 Nov 2023 23:13:30 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       etag:
-      - '"0x8DBEA1E4F088505"'
+      - '"0x8DBD083F0732E15"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -329,7 +338,7 @@ interactions:
       x-ms-blob-type:
       - PageBlob
       x-ms-creation-time:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -355,9 +364,10 @@ interactions:
       ParameterSetName:
       - -c -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.1 azsdk-python-storage-blob/12.16.0 Python/3.8.10 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
+        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
       x-ms-date:
-      - Mon, 20 Nov 2023 23:13:30 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
@@ -369,11 +379,11 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Mon, 20 Nov 2023 23:13:30 GMT
+      - Thu, 19 Oct 2023 09:15:30 GMT
       etag:
-      - '"0x8DBEA1E4F088505"'
+      - '"0x8DBD083F0732E15"'
       last-modified:
-      - Mon, 20 Nov 2023 23:13:29 GMT
+      - Thu, 19 Oct 2023 09:15:29 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
